test/ui/src/compile_fail/std/emit_props_nullable_non_ref.rs
fn main() {
    emit::emit!("template", #[emit::nullable] some: Some(1));
}
