test/ui/src/compile_fail/std/emit_props_nullable_non_ref.stderr
error[E0599]: capturing a nullable value requires `Option<&T>`. Try calling `.as_ref()`.
 --> src/compile_fail/std/emit_props_nullable_non_ref.rs:2:29
  |
2 |     emit::emit!("template", #[emit::nullable] some: Some(1));
  |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
 ::: $RUST/core/src/option.rs
  |
  | pub enum Option<T> {
  | ------------------ doesn't satisfy `Option<{integer}>: emit::__private::Nullable<'_>` or `_: __PrivateNullableHook<'_>`
  |
  = note: the following trait bounds were not satisfied:
          `Option<{integer}>: emit::__private::Nullable<'_>`
          which is required by `Option<{integer}>: emit::__private::__PrivateNullableHook<'_>`
          `&Option<{integer}>: emit::__private::Nullable<'_>`
          which is required by `&Option<{integer}>: emit::__private::__PrivateNullableHook<'_>`
          `&mut Option<{integer}>: emit::__private::Nullable<'_>`
          which is required by `&mut Option<{integer}>: emit::__private::__PrivateNullableHook<'_>`
